ultima-modificacion-angular

--- a/C5_Frontend/proyecto-final-techtalent/src/app/header/header.component.html
+++ b/C5_Frontend/proyecto-final-techtalent/src/app/header/header.component.html
@@ -1,4 +1,15 @@
-<footer class="footer">
-    <p>&copy; 2023 TFT Services</p>
-  </footer>
-  
+<nav class="navbar">
+  <div class="logo">
+      <a routerLink="/home">VALODI Services</a>
+  </div>
+  <ul class="nav-links">
+      <li><a routerLink="/sobre-nosotros">Sobre nosotros</a></li>
+      <li><a routerLink="/servicios-digitales">Servicios</a></li>
+      <li><a routerLink="/productos">Productos</a></li>
+      <li><a routerLink="/colaboradores">Colaboradores</a></li>
+  </ul>
+  <div class="auth-buttons">
+      <a href="#" class="login-btn">Login</a>
+      <a href="#" class="signup-btn">Sign Up</a>
+  </div>
+</nav>
