--- a/C5_Frontend/proyecto-final-techtalent/src/app/app.component.html
+++ b/C5_Frontend/proyecto-final-techtalent/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-header></app-header>
-<app-services></app-services>
-<app-home></app-home>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
