--- a/C5_Frontend/proyecto-final-techtalent/src/app/footer/footer.component.css
+++ b/C5_Frontend/proyecto-final-techtalent/src/app/footer/footer.component.css
@@ -1,5 +1,20 @@
 .footer {
-    background-color: #f1f1f1;
-    padding: 20px;
-    text-align: center;
+  margin-top: auto;
+  padding: 10px;
+  background-color: #333;
+  color: white;
+  width: 100%;
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  text-align: center;
+  position: relative; /* Ensure it respects the width of its parent */
+  left: 0; /* Make sure it starts from the left edge */
+  margin-top: 2%;
+  margin-bottom: 3%;
+}
+
+/* Media Queries for Mobile */
+@media (max-width: 768px) {
+  .footer{
+    margin-bottom: 3%;
   }
+}
