--- a/C5_Frontend/proyecto-final-techtalent/src/app/footer/footer.component.css
+++ b/C5_Frontend/proyecto-final-techtalent/src/app/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer {
   margin-top: auto;
   padding: 10px;
-  background-color: #333;
+  background-color: #000000;
   color: white;
   width: 100%;
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
@@ -10,11 +10,14 @@
   left: 0; /* Make sure it starts from the left edge */
   margin-top: 2%;
   margin-bottom: 3%;
+  border-top: 2px solid #dbb81a; /* Fine line at the top of the frame */
 }
+
 
 /* Media Queries for Mobile */
 @media (max-width: 768px) {
   .footer{
-    margin-bottom: 3%;
+    margin-bottom: 0;
+    padding: 10%;
   }
 }
