--- a/C5_Frontend/proyecto-final-techtalent/src/app/header/header.component.css
+++ b/C5_Frontend/proyecto-final-techtalent/src/app/header/header.component.css
@@ -1,6 +1,7 @@
 .navbar-container {
   display: flex;
   justify-content: center;
+  z-index: 1;
 }
 
 .navbar {
@@ -29,6 +30,7 @@
   align-items: center; /* Vertically centers the items */
   top: 6%;
   margin-left: 10%;
+  z-index: 1;
 }
 
 /* Ensure that the logo text 'TFT Services' remains visible */
@@ -122,31 +124,43 @@
 }
 
 @media (max-width: 768px) {
-.navbar {
-  flex-direction: column;
-  width: 100%;
-  margin: 0;
-  border-radius: 0;
-  gap: 20px;
-}
+  .navbar {
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    margin-top: 0;
+    border-radius: 0;
+    gap: 20px;
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+  }
 
-.navbar .nav-links {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  word-wrap: break-word;
-  text-align: justify;
-}
+  .navbar .nav-links {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    word-wrap: break-word;
+    text-align: justify;
+  }
 
-.navbar.shrink {
-  width: 100%;
-  flex-direction: column;
-  align-items: center;
-  height: auto;
-  align-content: center;
-  border-radius: 20%;
-  padding-top: 30%;
-  word-break: keep-all;
+  .navbar.shrink {
+    width: 80%; /* Center align the navbar */
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    align-content: center;
+    border-radius: 20%;
+    padding-top: 30%;
+    word-break: keep-all;
+    background-color: rgba(219, 184, 26, 0.8); /* Translucent color */
+    backdrop-filter: blur(10px); /* Blurs the background */
+    margin: 0 auto; /* Center align the navbar */
+  }
+  
+  /* Prevent text inside from blurring */
+  .navbar.shrink * {
+    backdrop-filter: none;
+  }
 }
-}
- 
