--- a/C5_Frontend/proyecto-final-techtalent/src/app/services/services.component.html
+++ b/C5_Frontend/proyecto-final-techtalent/src/app/services/services.component.html
@@ -1,4 +1,23 @@
-<section class="services">
-    <h2>Our Services</h2>
-    <!-- List services here -->
-</section>
+<header>
+    <h1>Titulo servicio</h1>
+</header>
+<div class="container">
+    <div class="section">
+        <h2>Sección de Texto</h2>
+        <p>Este es un párrafo de ejemplo. Puedes agregar todo el texto que necesites en esta sección.</p>
+        <p>Otro párrafo para demostrar la capacidad de agregar múltiples bloques de texto.</p>
+    </div>
+    <div class="section">
+        <h2>Sección de Imagen</h2>
+        <img src="ruta/a/tu/imagen.jpg" alt="Descripción de la imagen">
+        <p>Descripción o información adicional sobre la imagen.</p>
+    </div>
+    <div class="section">
+        <h2>Sección de Información</h2>
+        <p>En esta sección puedes agregar cualquier tipo de información que desees compartir en tu página web.</p>
+        <a href="#" class="button">Leer Más</a>
+    </div>
+</div>
+<footer>
+    <p>&copy; 2024 TFT Services. Todos los derechos reservados.</p>
+</footer>
