--- a/C5_Frontend/proyecto-final-techtalent/src/app/services/services.component.css
+++ b/C5_Frontend/proyecto-final-techtalent/src/app/services/services.component.css
@@ -1,3 +1,44 @@
-.services {
-    margin-top: 20px;
+header, footer {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+}
+header {
+    border-bottom: 5px solid #ddb81a;
+}
+footer {
+    border-top: 5px solid #ddb81a;
+}
+.container {
+    padding: 20px;
+}
+.section {
+    background-color: #fff;
+    color: #000;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.section h2 {
+    color: #ddb81a;
+}
+.section img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    background-color: #ddb81a;
+    color: #000;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+.button:hover {
+    background-color: #b59517;
 }
